exercices/openshift/deployment-config-nginx-base-new-version.yaml
apiVersion: v1
kind: DeploymentConfig
metadata:
  name: nginx-deployment-config
spec:
  selector:
    app: nginx
  replicas: 2
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx:1.19.6
        ports:
        - containerPort: 80
